syntax = "proto3";
package wavesenterprise;

option java_multiple_files = true;
option java_package = "com.wavesenterprise.transaction.protobuf";
option csharp_namespace = "WavesEnterprise";
option go_package = "wavesenterprise.com/weproto";

import "google/protobuf/wrappers.proto";

message AtomicBadge {
    google.protobuf.BytesValue trusted_sender = 1;
}
