syntax = "proto3";
package wavesenterprise;

option java_multiple_files = true;
option java_package = "com.wavesenterprise.transaction.protobuf.docker";
option csharp_namespace = "WavesEnterprise";
option go_package = "wavesenterprise.com/weproto";

message ContractCancelLease {
  string leaseId = 1;
}