syntax = "proto3";
package wavesenterprise;

option java_multiple_files = true;
option java_package = "com.wavesenterprise.transaction.protobuf";
option csharp_namespace = "WavesEnterprise";
option go_package = "wavesenterprise.com/weproto";

enum OpType {
    UNKNOWN_OP_TYPE = 0;
    ADD = 1;
    REMOVE = 2;
}
