syntax = "proto3";
package wavesenterprise;

option java_multiple_files = true;
option java_package = "com.wavesenterprise.transaction.protobuf";
option csharp_namespace = "WavesEnterprise";
option go_package = "wavesenterprise.com/weproto";

import "google/protobuf/wrappers.proto";
import "op_type.proto";
import "role.proto";

message PermissionOp {
    OpType op_type = 1;
    Role role = 2;
    int64 timestamp = 3;
    google.protobuf.Int64Value due_timestamp = 4;
}
